docs/02_modules/ACC-01/blueprint/v0.4/02_Workflow.md
# ACC-01 Account Structure
## 02 Workflow (v0.4)

All state-changing workflows use one mechanism — the **governed change request** (§1) — mirroring the accepted CLT-01 (`routes/decisions.ts`) and CFG-01 (`feature-changes.ts`) request/apply pattern, so no new IAM-02 seam is invented **by ACC-01**. Where the current IAM-02 seam cannot prove a property ACC-01 needs, the gap is recorded as an external dependency (§0, §1) — not papered over.

Two closure steps are **not** change requests: closure **initiation** is a maker-only, entitlement-checked, audited action (§7.1, ACC-R3-HD-02), and closure **completion** is a machine-verified compare-and-set (§7.6, or the atomic family completion of §7.4). Seal and abort remain maker-checker change requests.

## 0. Reality of current IAM-02 (RF-01, R2-F04 — read before §1)

Verified against repository source (`services/iam2`, re-checked for v0.3; **not re-read for v0.4**, whose changes concern the *target* contracts, not these facts):

| # | Fact | Source |
|---|---|---|
| 1 | `guard.ts` evaluates **step 6 (step-up) before step 7 (approval)**. With `requires_step_up = true` the check returns `step_up_required` **before approval is considered**. With `requires_approval = true` it returns `approval_required` at step 7, **before** the step-10 role-grant lookup, for **any** actor. A baseline `permission/check` on an approval-gated `acc1.*` code therefore returns `approval_required` for any actor; ACC-01 treats it as a baseline pass, so it is **not an entitlement check** | `guard.ts` |
| 2 | `/iam2/approvals/request`, `/approve`, `/reject` are guarded only by the IAM-02 internal service token and evaluate **no permission** for maker or approver. `maker_user_id` / `approver_user_id` are body fields (`IAM2-FIND-002`, HIGH, OPEN) | `routes/approvals.ts` |
| 3 | `permission/execute-verify` checks token existence, actor/action/resource/entity/client binding, payload fingerprint and cache version. It checks **no role grant** | `lib/decision-token.ts`; `routes/internal.ts` |
| 4 | The `execute-verify` body accepts an optional `approval_id`, but it is **never passed to verification and never compared**. The `approval_id` an ACC-01 caller presents is therefore **caller-asserted**, not verified; `execute-verify` does not return the token's approval id, approver, policy or maker | `routes/internal.ts`; `decision-token.ts` |
| 5 | `actor_id` in `execute-verify` is a **body field**. The token is bound to `approval.maker_user_id`, but IAM-02 does not authenticate who is calling: any holder of the internal service token **and** the decision token passes actor binding by presenting the maker's id | `routes/internal.ts` |
| 6 | The raw decision token is **returned in the `/approve` response**, i.e. to the **approve caller**, not to the maker | `routes/approvals.ts` |
| 7 | IAM-02 computes `fingerprint(payload)` itself (`"sha256:" + 64 hex`, 71 characters); the request schema has no hash field | `approvals.ts`; foundation `idempotency.ts` |

**Consequences (the claims withdrawn are listed in `05-remediation-r2.md`):**

- Any two distinct authenticated users, or any service holding the IAM-02 internal token, can request and approve; ACC-01 **provides no maker or checker entitlement** → `DEP-IAM-ENTITLEMENT`.
- ACC-01 **does not claim** that "a different caller cannot apply". Under today's seam that property does **not** hold, and ACC-01 cannot fake it by sending `actor_id = stored requested_by` (a caller-asserted value the seam accepts from anyone) → `DEP-IAM-ACTOR-BINDING` (ACC-R2-HD-07, DCR-ACC-IAM-06).
- ACC-01 **does not claim** `approval_id` is verified today. Until the actor-binding contract exists, a recorded `approval_id` carries `approval_id_source = caller_asserted` and reconciliation R-7 reports it as such.
- **Until the owning IAM-02 change exists, real governed ACC-01 apply remains gated.** ACC-01 fails closed on `DEP-IAM-ACTOR-BINDING` in every environment; development and testing satisfy it with an explicit labelled test double implementing the **target** contract (§1 step 7) — dependency injection, not an environment exception.
- The v0.1 statement that default-deny holds under an empty `role_permission` table stays **withdrawn** for approval-gated codes (true only for non-approval codes at guard step 10).
- **(R3-F04) Provenance of the actor must be independent of ACC-01.** ACC-01 is the only caller of the verify seam and holds the IAM-01 session, so an "authenticated actor assertion" that ACC-01 itself produced would be ACC-01's own claim echoed back — the caller-asserted posture ACC-R2-HD-07 forbids. `DEP-IAM-ACTOR-BINDING` is satisfied only when **IAM-02 verifies the actor against an authority outside ACC-01** (§1 step 7).

## 1. Governed change request (common mechanism)

Governed (maker-checker) change types: `create_master_account`, `create_subaccount`, `seal_closure`, `abort_closure`, `apply_restriction`, `lift_restriction`, `cancel_scheduled_restriction`. **(R3, ACC-R3-HD-02)** Closure **initiation** (`close_master_account`, `close_subaccount`) is **not** a maker-checker change request: it is a maker-only, entitlement-checked, audited action recorded as an `account_change_request` row with `approval_mode = 'maker_only'` (§7.1). Profile edits (`display_name`, `description`) are not governed: permission-checked, audited, version-checked.

| Step | Action | Actor | Control |
|---:|---|---|---|
| 1 | Maker submits `POST /acc1/change-requests` with `Idempotency-Key`; `requested_by` is the **IAM-01-authenticated session principal**, never a body field | Staff maker | Baseline `acc1.*` check through IAM-02 (`approval_required` counts as pass — **not** an entitlement; §0) |
| 2 | ACC-01 validates shape and preconditions (target exists, legal transition, limits configured and not exceeded, scope applicable, client readable through the CLT-01 read seam **using the dedicated read-scoped credential**) | ACC-01 | Fail early; every precondition is re-checked at apply |
| 3 | ACC-01 stores the request, its **canonical payload** and `payload_hash = fingerprint(payload)` (`@aix/foundation`, `"sha256:" + 64 hex`, 71 characters), `status = requested`, expiry. Response: `change_request_id`, canonical `approval_payload`, `payload_hash` | ACC-01 | Audit `acc1.change_requested` |
| 4 | An **operator outside ACC-01's routes** creates the IAM-02 approval via `POST /iam2/approvals/request` with `{ maker_user_id, action, resource, entity_id, client_id, payload }` — `payload` exactly the returned `approval_payload`. **IAM-02 computes its own fingerprint**; ACC-01 never submits a hash | Operator / maker | IAM-02 approval policy |
| 5 | A checker approves via `POST /iam2/approvals/:id/approve`. IAM-02 blocks requester == approver; **it does not entitlement-check either actor today (§0)** | Checker | SoD in IAM-02 only |
| 6 | IAM-02 mints the single-use **decision token**, bound to `actor / action / resource / entity_id / client_id / payload_hash / cache_version`. Under the current seam the raw token is returned **to the approve caller** (§0 fact 6); **how it reaches the maker is outside ACC-01 and is not a control ACC-01 relies on**. Under the target contract (step 7) token custody stops being a security property, because apply is bound to an authenticated actor | IAM-02 | — |
| 7 | **Apply** — `POST /acc1/change-requests/{id}/apply` with `{ decision_token, approval_id }` and the caller's **IAM-01 session / recent-auth reference exactly as received** (never minted, signed or transformed by ACC-01). **Target contract (DCR-ACC-IAM-06, `DEP-IAM-ACTOR-BINDING`)** — an actor-binding successor seam distinct from today's `execute-verify` (so a peer that lacks it answers 404/405 and **no token is consumed**): **IAM-02 verifies the actor from an authority outside ACC-01's body assertion** — validating the IAM-01 session/recent-auth reference, or an IAM-01-produced verifiable identity assertion, through its own trusted seam with IAM-01 — verifies the token, and **returns one attested record**: `actor_assertion_authority`, `authenticated_actor_id`, `maker_user_id`, checker/approver identity, `approval_id`, `policy_id`, **entitlement evidence** (per role: `{ evaluated, actor_id, permission_code, decision, grant_ref, policy_id, evaluated_at }`), `payload_hash`, `action`, `resource`, `entity_id`, `client_id`, and the scope of the credential ACC-01 presented (`credential_scope`). ACC-01 requires `authenticated_actor_id == maker_user_id == stored requested_by`, checker ≠ maker, entitlement evidence present and for the right actors/codes, `payload_hash` = the recomputed stored hash, every binding field equal to the request and `credential_scope` narrow; it **records the attested values** (`approval_id_source = iam2_attested`) and treats the body `approval_id` as a hint that must equal the attested id. **An assertion minted by ACC-01 does not satisfy `DEP-IAM-ACTOR-BINDING`, and ACC-01 never fakes the proof with a caller-supplied `actor_id`.** *Local defence in depth (not a substitute for IAM-02's proof):* the IAM-01-authenticated session principal must equal the stored `requested_by` (`ACC1_ACTOR_BINDING_MISMATCH`, Critical audit); both identities are audited | Maker | see §2 |
| 8 | Request → `applied`; history + audit written in the same transaction as the mutation | ACC-01 | Fail closed if audit unrecordable |

`entity_id` in the IAM-02 action = the `change_request_id`; `client_id` = the owning client; `action` = the `acc1.*` permission code; `resource` = the resource of file 07 §2.

Requests expire (`ACC1_CHANGE_REQUEST_TTL`, required configuration) and may be cancelled by their maker (session principal = `requested_by`) while `requested`. ACC-01 does **not** learn of an IAM-02 rejection; a rejected/expired approval simply leaves the request `requested` until it expires.

## 2. Apply (mirrors CLT-01 `approve/apply` and CFG-01 — including token-consumed-after-verify discipline)

| Step | Action |
|---:|---|
| A1 | Read the stored request row; require `status = requested` and not expired; **recompute** `payload_hash` from the **stored** payload (never a live re-read) and compare with the stored hash. Mismatch ⇒ refuse. |
| A2 | Re-check preconditions **before** any state-changing network call: dependency prerequisites for the change type (`ACC1_DEPENDENCY_NOT_SATISFIED`, file 01 §4.5 — **evidence verified from the owning service, never from configuration; no environment logic**; note **abort does not need `DEP-LED-CLOSURE-CONTRACT`**); client readable/eligible through the CLT-01 read seam (**dedicated read-scoped credential whose scope the response states; every change type reads CLT-01 at apply**); limits configured; target state. For creation and `seal_closure`: fetch the LED-01 attester's **contract descriptor** (operation-time call). For `seal_closure`: obtain a **fresh apply-time readiness verification** from every configured attester (§7.4) — a verification, **not** a new `closure_readiness` row. |
| A3 | Call IAM-02's actor-binding seam per the **target contract** (§1 step 7) with the presented token, the caller's IAM-01 session reference as received, `action`, `resource`, `entity_id = change_request_id`, `client_id` and `current_payload_hash = <recomputed>`. Any non-2xx / seam absent / `execution_authorised !== true` / malformed / missing or mismatched attested fact (including absent entitlement evidence or `actor_assertion_authority`) ⇒ **deny**, request unchanged. This is **before** ACC-01 opens its local transaction; the token is consumed the moment verification succeeds. |
| A4 | Open the local transaction: `FOR UPDATE` the request row and target rows (for `create_subaccount` the master is read **`FOR SHARE`** first — §4); re-validate transition legality, limits (under the advisory lock), uniqueness and closure state, the **family set** (seal of a master, abort of a master), the **seal pin conditions** — target `version` = approved, pinned readiness still latest and `ready` with the approved watermark (seal) — and the **abort evidence** (abort). **Lock order (R3):** the master row first, then children in ascending internal id; perform the mutation; write status history; set request `applied` with `result_ref` and the attested approval fields; emit audit. One transaction. |
| A5 | **Any failure after A3** (including a crash or an audit failure) rolls back and leaves the row exactly `requested`. The consumed approval is **not** reusable — the operator obtains a **fresh** IAM-02 approval and applies again. This is the accepted CLT-01/CFG-01 posture: no separate `failed` write; a best-effort failure audit is attempted only when the failure is not itself an audit failure. |

Replays: applying an already `applied` request returns the recorded result and mutates nothing. Two concurrent applies cannot both pass A3 (single-use token) and serialise on the A4 row lock.

v0.1's `applying` / `verification_ref` claim-and-recover mechanism remains **withdrawn**.

## 3. WF-A — Create master account

1. Preconditions (re-checked at apply): `client_id` supplied; CLT-01 status ∈ {`active`, `active_limited`} and class ∈ {`institutional`, `hnwi`, `professional`} (`retail`/`unknown` ⇒ deny) — a **local structural backstop, not an eligibility authority** (RF-11); non-closed master accounts for the client < `ACC1_MAX_MASTER_ACCOUNTS_PER_CLIENT`; `ACC1_MAX_SUBACCOUNTS_PER_MASTER` present and ≥ 1 (else fail closed); the governed-apply dependency set **and `DEP-LED-CLOSURE-CONTRACT`** satisfied — the latter by the attester's contract descriptor fetched at apply, never by configuration (RF-02 approved decision; file 01 §4.5).
2. Request → approval → apply (§1–§2).
3. On apply, atomically: insert `master_account` (`active`); insert the **default `general` subaccount** (`is_default = true`, `active`; **structural only**, file 01 §8); write history; snapshot `client_status_at_creation`/`client_class_at_creation`; audit `acc1.master_account_created` and `acc1.subaccount_created`. Failure of either rolls back both.
4. Created while the client is `active_limited`, the account is *inert*: client-derived effective status is `restricted` with **report-only** semantics (every transaction-producing activity denies) until CLT-01 reports `active`; it becomes usable with no ACC-01 action.

## 4. WF-B — Create subaccount

1. Preconditions: master exists; its effective status ∈ {`active`, `restricted`}; `purpose` valid; name unique among the master's **non-`closed`** subaccounts (`closing`/`closure_sealed` included); subaccount count (non-`closed`, including the default) < `ACC1_MAX_SUBACCOUNTS_PER_MASTER`, validly configured; the governed-apply set **and `DEP-LED-CLOSURE-CONTRACT`** satisfied.
2. Request → approval → apply. Owner is **taken from the master row**; a request cannot name a `client_id` for a subaccount.
3. **Concurrency with master closure (R2-F02).** The apply transaction and `trg_acc1_sa_owner` read the master row **`FOR SHARE`** before the status check. A concurrent master-closure **initiation** (which `FOR UPDATE`s the master) therefore serialises with it: creation first ⇒ the new child is visible to the initiation, the family set no longer matches the preview hash and the initiation is refused (`ACC1_CLOSURE_FAMILY_SET_CHANGED`; new preview); closure first ⇒ the master is `closing` and creation is rejected (`ACC1_PARENT_NOT_USABLE`). **A master in `closing` or later rejects new child creation.**
4. Audit `acc1.subaccount_created`.
5. **Who may be maker/checker for each purpose is not decided here** (ACC-HD-2): the Role Matrix + IAM-02 define it (DCR-ACC-GOV-02).

## 5. WF-C — Apply restriction (WF-26 application step)

ACC-01 implements only WF-26 steps **6–7 and 11** (system applies / removes restriction; affected workflows blocked by scope). Steps 1–5 and 8–10 belong to the compliance workflow and IAM-02. **Ownership of whole-client freeze, of `login_block`, and the relationship between a CLT-01 client freeze and an ACC-01 account restriction are ungoverned (DCR-ACC-GOV-05); an ACC-01 restriction never substitutes for a client-level freeze; operating this workflow requires `DEP-FREEZE-GOVERNANCE`, which is a governance-only dependency and is **hard-unsatisfied in ACC-01's code** until an authoritative governance record closes DCR-ACC-GOV-05 and an approved ACC-01 task lifts it (file 01 §4.5). No configuration value satisfies it.**

1. Maker supplies: target (master **or** subaccount), `kind` ∈ {`partial_restriction`, `suspension`, `full_freeze`}, `scopes`, `source_type`, `source_ref?`, `reason_code`, `effective_from?`, `effective_until?`.
2. Blocking conditions (WF-26 §30.6): missing reason/scope ⇒ reject; maker-checker incomplete ⇒ cannot apply; SoD conflict ⇒ IAM-02 blocks.
3. `login_block` is not an account scope ⇒ `ACC1_SCOPE_NOT_APPLICABLE`.
4. Apply inserts an `account_restriction` row, **increments the target row's `version`**, recomputes the target's stored status projection under the row lock (a `closing`/`closure_sealed` target keeps its lifecycle status; the restriction is recorded and honoured by resolution), writes history, audits Critical.
5. Multiple simultaneous restrictions are legal; stored status is the worst projection.
6. **Time-effective, not job-effective (RF-08).** "Now" is the **database `clock_timestamp()`** read inside the resolve query or the locked check — never the application clock and never `now()` (transaction start) (R3-F07.2). A restriction whose `effective_from_utc <= clock_timestamp()` is **treated as active by resolution** whether its stored lifecycle state is `scheduled` or `active`. The lifecycle job is **housekeeping**: it moves `scheduled → active`, records status/history/audit and bumps `version`; a late or crashed job opens **no** enforcement gap. Resolve reports `applied_restriction_ids`. An `effective_until_utc` lapse is likewise evaluated by time; authority-sourced restrictions (`court_order`, `regulatory_directive`) never lapse by time.

## 6. WF-D — Lift restriction, and WF-D2 — Cancel a scheduled restriction (R2-F07)

**Legality is decided by effective time only — never by the stored lifecycle state, and never by whether housekeeping has run** (ACC-REQ-049). **Time source (R3-F07.2):** every legality decision uses the **database `clock_timestamp()`** evaluated in the locked check, not `now()` (which is the transaction *start* time and could let a cancel that began just before `effective_from_utc` commit just after it), and not the application clock. The database backstops it: `trg_acc1_restriction_terminal` allows `cancelled` only while `effective_from_utc > clock_timestamp()`, and a **deferred constraint check at commit** re-evaluates the same condition, so a cancel can never commit after the restriction became effective. The only residual window is the commit latency of the transaction itself; a resolve inside it evidences the restriction through `applied_restriction_ids` and the version bump. Authority-sourced rows already require release evidence.

| Restriction, evaluated **by time** at apply, under the row lock | Governed operation | Result |
|---|---|---|
| **In force** (`effective_from_utc <= clock_timestamp()`, not lifted/cancelled, not lapsed) — whether stored `active` **or still stored `scheduled`** | `lift_restriction` | Legal. If stored `scheduled`, the lift transaction **first performs the activation inline** (`scheduled → active`, history + audit `acc1.account_restriction_activated` with cause `lift_inline_activation`), then `active → lifted`, in one transaction |
| **Not yet effective** (`effective_from_utc > clock_timestamp()`, stored `scheduled`) | `cancel_scheduled_restriction` | Legal: `scheduled → cancelled` |
| Not yet effective | `lift_restriction` | Refused `ACC1_RESTRICTION_NOT_IN_FORCE` (use cancel) |
| Already effective **by time** | `cancel_scheduled_restriction` | Refused `ACC1_RESTRICTION_ALREADY_EFFECTIVE` (use lift); time may pass between submit and apply, so this is decided at apply |
| Lapsed (`effective_until_utc` passed), lifted, expired or cancelled | either | Refused `ACC1_RESTRICTION_NOT_IN_FORCE`; housekeeping aligns stored state |

**Lift:**
1. Maker requests lift with `lift_evidence_ref` (WF-26 step 9).
2. Lift **blocked** when evidence is missing, or when the source is `court_order`/`regulatory_directive` and the evidence is not recorded as an authority release (WF-26 §30.6 items 5–6).
3. Approval → apply → restriction `lifted`, target `version` incremented, status recomputed, history + Critical audit.
4. Lifting never restores a status that another still-active restriction forbids.

**Cancel scheduled restriction:**
1. Maker requests with `reason_code` and, for `court_order`/`regulatory_directive` sources, authority-release `cancel_evidence_ref` (same rule as lift).
2. Governed by **maker-checker** like every restriction change (`acc1.restriction.cancel`, approval-gated; governed-apply set + `DEP-FREEZE-GOVERNANCE`).
3. Apply → restriction `cancelled`, `cancelled_change_request_id`/`cancelled_at_utc` set, target `version` incremented (ACC-REQ-041), history + audit (`acc1.account_restriction_cancelled`). The restriction never affected any resolve, so nothing else changes.

The housekeeping job **must never determine** whether a restriction can be lifted or cancelled; stopping it changes no legality (T-195…T-198).

## 7. WF-E — Closure (WF-27, account level) — preventive, completable, family-atomic

Approved decisions: ACC-R2-HD-01 (drain allow-list), -02 (final checker approval before seal), -03 (governed abort), -05 (independent barrier); **ACC-R3-HD-01** (master-family closure; amends ACC-R2-HD-04), **ACC-R3-HD-02** (maker-only initiation). Dependency prerequisites per operation: file 01 §4.5. **Until the LED-01 contract exists (DCR-ACC-LED-01c/-01e) closure cannot complete anywhere**; an empty attester configuration disables it (`ACC1_CLOSURE_ATTESTERS_UNCONFIGURED`), never "nothing to check".

```txt
INDEPENDENT TARGET / non-default subaccount:
ACTIVE → [maker-only initiation] → CLOSING/DRAINING → PRE-SEAL READY → FINAL CHECKER APPROVAL (pinned) → CLOSURE_SEALED → POST-BARRIER ATTESTATION → CLOSED
                       └────────────────── governed abort (§7.7) ─────────────────────────┴───────────────────────┘

MASTER FAMILY (master + default + every master-directed child):
ACTIVE → [maker-only initiation of the master] → ALL enter CLOSING atomically
  each child (default included): DRAIN → READY → own FINAL APPROVAL → CLOSURE_SEALED → attested → STOPS (waits)
  master: eligibility (all master-directed children sealed+attested; independent children closed) → own READY → own FINAL APPROVAL → CLOSURE_SEALED → attested
  FAMILY COMPLETION: ONE transaction closes every master-directed child, the default and the master
  master abort before completion: reverses master + default + master-directed children (independent closures untouched)
```

### 7.1 Initiation (WF-27 steps 1–3; ACC-R3-HD-02) → `closing`

**Initiation is maker-only, entitlement-checked and audited. It is not maker-checker** (ACC-REQ-054). Routes: `POST /acc1/master-accounts/{id}/close/initiate` and `POST /acc1/subaccounts/{id}/close/initiate` (file 04 §2.4), with `Idempotency-Key`.

1. **Permission.** The non-approval permission `acc1.master_account.close_initiate` / `acc1.subaccount.close_initiate` is checked through IAM-02. Because these codes have `requires_approval = false` (file 07 §2) the guard reaches the step-10 role lookup — **a genuine entitlement check**, not the `approval_required` short-circuit that makes approval-gated codes unusable as an entitlement (`IAM2-FIND-002`). An approval-gated code is **never** used for initiation (catalogue guard, T-240).
2. **Attested evidence.** ACC-01 also requires the attested maker-initiation decision of DCR-ACC-IAM-07 / -06: IAM-02 verifies the actor independently of ACC-01 and returns the entitlement evidence for the initiating actor (`DEP-IAM-ACTOR-BINDING`, `DEP-IAM-ENTITLEMENT`, file 01 §4.5). **Until the owning IAM-02 / Role Matrix change exists, real closure initiation remains externally gated** (`ACC1_DEPENDENCY_NOT_SATISFIED`). Other prerequisites: `DEP-IAM-SCOPED-CREDENTIAL`, `DEP-CLT-READ-SCOPE`, `DEP-LED-CLOSURE-CONTRACT` (attester descriptor fetched now).
3. **Local transaction** (one, fail closed if the Critical audit `acc1.account_closure_initiated` cannot be recorded): an `account_change_request` row is written with `change_type = close_*`, `approval_mode = 'maker_only'`, `requested_by` = the authenticated actor, the attested entitlement evidence reference, and `status = applied`; the target(s) enter `closing`, `closure_cycle` is incremented, and history is written. There is **no** approval token, checker or IAM-02 approval route in this path (source guard, T-240).
4. **Subaccount initiation (independent).** A **non-default** subaccount whose master is operational (`active`/`restricted`/`suspended`/`frozen`) enters `closing` **alone**; its `closure_family_id` stays NULL — it is an **independent closure** (file 01 §7.4). The **default** cannot be the target (`ACC1_DEFAULT_SUBACCOUNT_PROTECTED`). A subaccount whose master is `closing`/`closure_sealed`/`closed`, or that already belongs to a family, cannot be initiated independently (`ACC1_CLOSURE_FAMILY_MEMBER`).
5. **Master initiation (family).** The maker first reads the preview (`GET …/close/preview`) which lists **every non-closed subaccount, the default included** (id, `version`, status, and whether it is already in an independent closure) and returns the **`family_set_hash`**. The initiation carries that hash. Under `FOR UPDATE` on the master and then every non-closed child in ascending internal id, ACC-01 re-derives the set; a difference ⇒ `ACC1_CLOSURE_FAMILY_SET_CHANGED`, nothing changes (a subaccount created after the preview changes the set; creation additionally reads the master `FOR SHARE`, so a child cannot appear after the family began). Then, atomically: the master, **its default** and every operational child enter `closing` with `closure_family_id = <this initiation id>`; a `closure_family` row and one immutable `closure_family_member` row per participant are written; each child **already** `closing`/`closure_sealed` through its **own** initiation is recorded `independent_preserved` (audit `acc1.account_closure_independent_preserved`), **not adopted, not re-initiated and not touched**. Children already `closed` are not listed.

### 7.2 Drain (WF-27 steps 4–8)
`closing` permits **only** the closure-drain allow-list of file 01 §7.1 (CDA-1…CDA-5) and only where every other component (restrictions, client status) still permits it; every other transaction-producing activity is denied. ACC-01 performs none of it — it supplies `closure_draining = true` and the closure initiation id, and consumers apply the allow-list (file 01 §10). OFF-RULE-001 items 1–5 are cleared during drain by the owning modules. Restrictions may still be recorded against a `closing` target; the stored status stays `closing` and resolution honours the restriction. A master-directed child that has reached `closure_sealed` is **barred**, not draining.

### 7.3 Pre-seal readiness (prevents sealing a funded account)
`POST …/close/readiness` (target `closing`): ACC-01 checks the target is `closing`, fetches the attester's contract descriptor (`DEP-LED-CLOSURE-CONTRACT`), calls the attester and **inserts** a `closure_readiness` row. A result is affirmative only if it proves: no remaining balance **or** the authorised balance-return complete; no open withdrawal or settlement requiring completion; no blocking reconciliation break; no unaccounted in-flight posting (file 01 §7.2). It returns `journal_watermark` (W_pre, **commit-ordered**), `max_resolution_version_observed`, `closure_cycle_observed`, `evidence_ref`, `as_of`. **Insert legality is enforced by the database (R3-F02):** the row is refused unless, under a `FOR SHARE` lock on the target row in the inserting transaction, the target is `closing`, at the named `closure_cycle` and initiation (`trg_acc1_readiness_insert`); a collection that raced a seal is refused and never recorded. The database stamps `target_version_observed`. Readiness may be re-collected any number of times while `closing`; **only the latest row per target + attester + `closure_cycle` counts until the seal**, and from the seal on the **pin** is the reference. For a **master**, the family facts (all master-directed children sealed and attested; independent children closed) are ACC-01's own and are checked at the master's seal (§7.4), not attester assertions.

### 7.4 Final checker approval → seal (WF-27 steps 9–10; ACC-R2-HD-02; R3-F02 pinning)
1. **Seal request** (`seal_closure`; the maker submits **only when the latest readiness is affirmative**). The canonical approval payload **pins the exact evidence the checker will approve**: the target id; the target `version`; `closure_cycle`; the closure initiation id; **per attester `readiness_id`, `readiness_seq`, `journal_watermark` (W_pre) and `readiness_payload_hash`**; for a master-directed child the `closure_family_id`; for a **master** the `family_set_hash` — each master-directed member's id, membership, `closure_cycle`, `closure_seal_version`, `closure_sealed_at_version`, pinned readiness ids and latest attestation ids. Its `payload_hash` is the **seal request payload hash**. (Each master-directed child, the default included, has **its own** seal request and **its own** final approval.)
2. **The checker's approval of this request is the ONE FINAL HUMAN APPROVAL for that target**, given immediately before sealing. No second checker is needed after sealing, and none is designed. Initiation had **no** checker (§7.1).
3. **Apply** (§2): A2 obtains a **fresh apply-time readiness verification** (not inserted); if it is not affirmative, or its `journal_watermark` differs from the approved W_pre, the seal is refused `ACC1_CLOSURE_NOT_READY` and a new request is needed. Then A3 verify and A4 **one transaction** under lock (master row first, then children in ascending id): re-check legality (`closing → closure_sealed` only); **target `version` = the approved `version`** (any restriction, profile edit or other mutation after approval ⇒ `ACC1_CLOSURE_APPROVAL_STALE`); `closure_cycle` and initiation id equal; **each pinned readiness row is still the latest row of its attester at this cycle**, is `ready`, and carries the approved watermark and payload hash; no `court_order`/`regulatory_directive` block; **for a master, the family eligibility rule** (file 01 §7.4 step 3: every master-directed child `closure_sealed` with barrier, intact pin and a fresh clear latest attestation at its current seal version; every independent child `closed`; recomputed `family_set_hash` = approved). Then it sets `closure_barrier = true`, increments `closure_seal_version`, records `closure_sealed_at_version` (= the target `version` written by this transition), bumps `version`, **writes the immutable `closure_seal_pin`** (+ per-attester pinned-readiness rows, the apply-time verification result, the seal request payload hash, the attested approval id, checker and policy id) and stores `closure_seal_pin_id` on the target; history, Critical audit `acc1.account_closure_sealed` (with the pin id).
4. From this point `closure_barrier = true` and **every new posting is refused** by every consumer, independent of any other status (file 01 §10), and **no readiness row can be inserted** for the target.
5. A master-directed child that is now `closure_sealed` **stops here**: it has no individual completion (§7.6).

### 7.5 Post-barrier attestation (machine-verified)
ACC-01 collects a **fresh** attestation from every configured attester **after** the seal, sending `target_id`, `closure_seal_version`, `closure_sealed_at_version` and — from the **pin**, never from "latest readiness" — `preseal_watermark_ref`. Each returns `{ target_id, seal_version_observed, attestation_status, journal_watermark, preseal_watermark_ref, committed_after_preseal_watermark, max_resolution_version_committed, in_flight_count, in_flight_status, balance_state, open_item_count, evidence_ref, as_of }` (file 01 §7.2). The database binds each row to the target's `closure_seal_pin_id` and pinned readiness id and computes `binding_ok`. Rows are append-only with a monotonic sequence. Unreachable, unconfigured, malformed, stale or mismatched ⇒ `unavailable`/`blocked`. **Only the latest row per target + attester + current `closure_seal_version` counts.** A blocked or unavailable attestation is not terminal: re-collect (latest wins) or, if it cannot resolve, use the governed abort (§7.7). A master-directed child's attestation is collected **before** the master's seal (it is a family eligibility input) and stays current only while it is within `ACC1_ATTESTATION_MAX_AGE_SECONDS`.

### 7.6 Complete (machine-verified; **no second checker**)
**Independent target** (`POST …/close/complete`, a non-approval, entitlement-checked permission `acc1.*.close_complete`): a single compare-and-set `closure_sealed → closed` **only if**, inside one transaction: status is still `closure_sealed` **and** `closure_barrier = true` at the attested `closure_seal_version`; the latest attestation of **every configured attester** is `clear` with `binding_ok`, `seal_version_observed` = current, `preseal_watermark_ref` = **`pin.pinned_readiness.journal_watermark`**, `committed_after_preseal_watermark = 0`, `max_resolution_version_committed < closure_sealed_at_version`, `in_flight_status ∈ {none, refused_by_fence}`, `balance_state ∈ {none, returned}`, `open_item_count = 0`, and `as_of` within `ACC1_ATTESTATION_MAX_AGE_SECONDS` (secondary guard; required configuration; missing/invalid ⇒ fail closed); no active `court_order`/`regulatory_directive` restriction. A "later readiness" is never consulted. The barrier is never cleared on this path. On any failure the target **stays `closure_sealed`** (still barred), outcome codes are returned (`ACC1_CLOSURE_BLOCKED`) and the governed abort remains available.

**A master-directed child, the default included, has no individual completion**: `close/complete` on it ⇒ `ACC1_CLOSURE_FAMILY_MEMBER`, and the database refuses a `closed` write for a family member outside the master's atomic completion (`trg_acc1_default_protected`, `trg_acc1_seal`).

**Master (family) completion** — `POST /acc1/master-accounts/{id}/close/complete` — is **one atomic transaction** (file 01 §7.4 step 4): lock the master, then every member in ascending internal id; re-verify the master's latest current attestation against its pin; re-verify every master-directed child's latest attestation at its current seal version against **that child's** pin; verify every barrier is `true`; recompute the family set hash and require it to equal the master's pinned hash; re-check family eligibility and the absence of an authority restriction; then close **every master-directed child, the default and the master**, write history (cause `closure_family_complete`) and one Critical audit. Any failure rolls back all of it; every member stays `closure_sealed`.

### 7.7 Governed abort / unseal (ACC-R2-HD-03; amended R3-F05)
`abort_closure` is a **maker-checker** governed change request, legal from `closing` **or** `closure_sealed`, **not a normal operational shortcut**. **Dependencies: the governed-apply set only — not `DEP-LED-CLOSURE-CONTRACT`.** Abort makes no LED-01 call; it must stay available when the attester or its contract is the failure.

1. **Evidence-conditioned, from ACC-01's own rows.** The request carries a `reason_code` ∈ {`preseal_readiness_blocked`, `postseal_attestation_blocked`, `postseal_attestation_unavailable`, `closure_invariant_failed`, `authority_restriction_blocks_closure`, `attester_contract_fault`}; at apply ACC-01 verifies the matching stored evidence (latest readiness `not_ready`/`unavailable`; latest attestation `blocked`/`unavailable`; an invariant query failing; an active authority restriction; a recorded attester contract error). **Family evidence:** a **master** abort may cite blocking evidence belonging to the **master, the default or any master-directed child** of the family being aborted, as the latest row of its kind; evidence of an independent child or of a non-member is not acceptable. No matching evidence ⇒ `ACC1_CLOSURE_ABORT_INVALID`. It **cannot bypass a closure requirement** and cannot apply to `closed`. *Stated plainly:* in `closing`, any undrained target yields a `not_ready` row, so this test is met whenever a target is not yet drained — the control against misuse is **maker-checker, the recorded evidence and the Critical audit**.
2. **Scope.** A **master-directed** subaccount (the default included) cannot be aborted alone (`ACC1_CLOSURE_FAMILY_MEMBER` / `ACC1_DEFAULT_SUBACCOUNT_PROTECTED`). A **master** abort lists in its approved payload the family id and every participating member (id, `closure_cycle`, `closure_seal_version`) and reverses the **master, the default and every master-directed child still in the family**, in one transaction. **Independently initiated child closures are not reversed** — their rows, barriers, cycles and pins are untouched and no recovery row is written for them; the preserved set is audited (`acc1.account_closure_independent_preserved`). An independent child can be aborted **on its own** with **its own** evidence at any time it is `closing` or `closure_sealed`, even while its master is `closing`. Children already `closed` stay `closed` (only independent ones can be, so the default is always reversed with its master and the structural invariant holds).
3. **One transaction:** invalidate all closure-readiness and post-seal attestations (evidence is keyed to `closure_cycle` and `closure_seal_version`; abort **increments `closure_cycle`** and never resets `closure_seal_version`, so old evidence can never match a later seal); clear each returned row's `closure_seal_pin_id` and `closure_family_id` (pins and family rows stay as evidence; the family becomes `aborted`); increment `version`; **clear `closure_barrier` — only here**; recompute the stored status as the projection of the restrictions **in force by time** (database clock); write history and a `closure_recovery` row per returned member; emit Critical audit `acc1.account_closure_aborted`.
4. **Never restores what another authority denied.** Only ACC-01's own projection is restored. Effective status is still computed live: a client CLT-01 has suspended, a restriction still in force, or a capability CFG-01 withholds stays denied. A new closure needs a new initiation (a new family id; T-204).
5. LED-01 lifts its fence only when `resolve` shows `closure_barrier = false` (authoritative); a later seal has a higher `closure_seal_version` (DCR-ACC-LED-01c).

### 7.8 Master ordering (replaces v0.3 "children first, all closed")
Every master-directed child (default included) drains, is sealed (own final approval) and attested, and **waits at `closure_sealed`**; only when **all** are sealed with fresh clear attestations (and every independent child is `closed`) may the master be sealed (own readiness, own final approval), attested and then **completed together with the family in one transaction**. No `closed` child ever stands under a non-`closed` master except an independently completed non-default child. A master with **only its default child** completes end to end (T-199).

### 7.9 Out of scope here
Items 6–8 of OFF-RULE-001 (AML/STR restriction, verified own-name return destination, retention) are **client-level** and stay with CLT-01/compliance (ACC-01 additionally refuses to seal/complete under an active authority restriction).

## 8. WF-F — Resolve (hot path)

1. Consumer presents its per-module capability secret; ACC-01 derives `caller_module` from which secret matched (never a header).
2. ACC-01 reads: subaccount, master, restrictions (both levels, **evaluated by time**), and CLT-01 status through its **dedicated read-scoped credential** (`DEP-CLT-READ-SCOPE`).
3. Computes `closure_barrier`, `closure_draining`, per-level time-effective restriction status (**database clock**), the descriptive `effective_status`, explanatory scopes; returns version and closure/seal evidence (including the closure initiation id, the CDA-1 discriminator), `applied_restriction_ids`, `environment`. **Consumers apply the evaluation order of file 01 §10 — `closure_barrier` first, then component statuses, then product policy; the response is not an allow-list and `effective_status` is not the gate.**
4. Any unreadable input ⇒ `effective_status = "unknown"` (HTTP 200); ACC-01's own DB failure ⇒ 503. Consumers deny on both.
5. **Requires an explicit `subaccount_id`.** There is no resolve-by-client, resolve-by-master-default or "default subaccount" lookup (ACC-HD-1).
6. No per-call audit row (volume); caller-authentication failures are audited; aggregate metrics feed monitoring.

## 9. WF-G — Profile update

`PATCH` `display_name` / `description`; optimistic `version`; permission `acc1.*.update_profile`; no approval; audit `acc1.account_profile_updated`. Never touches ownership, purpose, status, `is_default`.
